remove usage of param wher header username
