# docs/swagger.json
@@ -130,7 +130,7 @@
                 }
             }
         },
-        "/messages/getDiscussions/{userId}": {
+        "/messages/getDiscussions/": {
             "get": {
                 "security": [
                     {
@@ -151,15 +151,6 @@
                     "messages"
                 ],
                 "summary": "Return a list of user who a user speaks to",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -173,7 +164,7 @@
                 }
             }
         },
-        "/messages/getMessagesBetween/{userId1}/{userId2}": {
+        "/messages/getMessagesWith/{userId}": {
             "get": {
                 "security": [
                     {
@@ -183,7 +174,7 @@
                         "X-User": []
                     }
                 ],
-                "description": "get messages between two user",
+                "description": "get messages with a user",
                 "consumes": [
                     "application/json"
                 ],
@@ -193,19 +184,12 @@
                 "tags": [
                     "messages"
                 ],
-                "summary": "get messages between two user",
+                "summary": "get messages with a user",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "User ID 1",
-                        "name": "userId1",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "User ID 2",
-                        "name": "userId2",
+                        "description": "User ID",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
